--- a/_posts/2019-12-31-the-us-narrative-today.html
+++ b/_posts/2019-12-31-the-us-narrative-today.html
@@ -1565,107 +1565,107 @@ stories:
   domain: http://www.grandcoulee.com/
   link: https://www.grandcoulee.com/story/2019/12/25/opinion/working-for-community-is-a-local-business-ethic/12546.html
 images:
-- name: school-clouds-church-clouds-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-nazi-poster.jpg
-- name: adam-smith-adam-smith-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-jap-dys-1.jpg
-- name: nazi-invasion-train-small-town-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-small-town-station.jpg
-- name: carry-load-carryload-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-smoking-cigarette.jpg
-- name: stalin-time-san-francisco-from-salesforce-west.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-san-francisco-from-salesforce-west.jpg
-- name: power-lines-power-lines-empty-space-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-bright-sand.jpg
-- name: liberty-back-statue-liberty-back-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-kand-two.jpg
-- name: old-school-house-old-schoolhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-alberto-giacometti.jpg
-- name: miamibeach-miamibeach-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-alien-goggles.jpg
-- name: copper-circuit-IMG_7072.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7072.jpg
-- name: amusement-park-amusement-park-2-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-electricity.jpg
-- name: containership-containership-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-post-modern.jpg
-- name: store-on-corner-store-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-blue-brush.jpg
-- name: mistywoods-babyfoot-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-kandinsky-bv.jpg
-- name: old-granary-field-granaryfield-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-neo-instinct.jpg
-- name: powerlines-power-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-kand-two.jpg
-- name: aws-s3-stories-solidies-planning-attack-blue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-solidies-planning-attack-blue-matrix.jpg
-- name: nazi-invasion-dark-hallway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dark-hallway.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-gan-vogh.jpg
-- name: legal-statue-legalstatue-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-cinnamon-rolls.jpg
-- name: copper-circuit-google-front-of-business.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-google-front-of-business.jpg
-- name: nazi-invasion-waterfall-southern-oregon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-waterfall-southern-oregon.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-5.jpg
-- name: razorwire-DSC-0080-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-blue-brush.jpg
-- name: adam-smith-adam-smith-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kand-two.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-pablo-blue.jpg
-- name: store-on-corner-oldcabin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-internet-numbers.jpg
-- name: dragon-desert-desert-dragon-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-kand-two.jpg
-- name: berlinwall-DSC-0084-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-monet-one.jpg
-- name: liberty-back-statue-liberty-back-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-purple-pond.jpg
-- name: windowmountain-window-mountain-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-matrix.jpg
-- name: berlinwall2-berlinwall-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dali-three.jpg
-- name: san-francisco-street-view-san-francisco-street-view-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dali-three.jpg
-- name: oldhotel-oldhotel-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-colorful-blocks.jpg
-- name: oldhousecars-house-old-cars-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-really-hot.jpg
-- name: berlinwall-DSC-0084-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-blue-circuit.jpg
-- name: old-cabin-oldcabin-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dark-rain.jpg
-- name: copper-circuit-cross-against-trees.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cross-against-trees.jpg
-- name: stories-cityscape-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cityscape-dali-three.jpg
-- name: docks-docks-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-crabapple.jpg
-- name: dc-statue-dcstatue-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dark-soul.jpg
-- name: old-school-house-old-schoolhouse-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-purp-paper.jpg
-- name: nazi-invasion-IMG_6174.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6174.jpg
-- name: bf-skinner-stainless-tree-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-stainless-tree-clouds.jpg
-- name: docks-docks-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-blue-granite.jpg
-- name: udnie-concert-hall.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-concert-hall.jpg
-- name: catacombs-catacombs.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-dark-dali.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dark-dali.png
-- name: white-house-lawn-white-house-window-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-diego-rivera1.jpg
-- name: eduardo-eduardo-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-space-pizza.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-soul.jpg
+- name: oldbarn-oldbarn-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-clean-view.jpg
+- name: mosaic-face-mosaic-face-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dali-two.jpg
+- name: border-crossing-bordercrossing-spagetti-accident.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-spagetti-accident.png
+- name: la-muse-grafitti-woman-bangs.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-grafitti-woman-bangs.jpg
+- name: stalin-time-fire-truck-pulling-out-of-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-fire-truck-pulling-out-of-station.jpg
+- name: stalin-time-desktop-laptop-chair.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-desktop-laptop-chair.jpg
+- name: liberty-back-statue-liberty-back-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-spagetti-accident.jpg
+- name: mosaic-face-mosaic-face-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-smooth-ride.jpg
+- name: old-door-lock-old-door-lock-2-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-alien-goggles.jpg
+- name: copper-circuit-old-gas-station_35891228584_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-gas-station_35891228584_o.jpg
+- name: amusement-park-amusement-park-2-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-purp-paper.jpg
+- name: nazi-invasion-san-francisco-skyline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-san-francisco-skyline.jpg
+- name: server-racks-clouds-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-dark-dali.jpg
+- name: store-on-corner-oldcabin-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-yellow-collage.jpg
+- name: old-barn-old-barn-1500-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dry-skin.jpg
+- name: carry-load-carryload-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-marcel-duchamp.jpg
+- name: mediterranean-mediterranean-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-neo-instinct.jpg
+- name: miamibeach-miamibeach-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-umberto-bocc.jpg
+- name: nazi-invasion-DSC_0048.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0048.jpg
+- name: aws-s3-stories-new-32-119-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-32-119-800-500-0-max-0--1--1.jpg
+- name: la-muse-city-waterfront-path.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-waterfront-path.jpg
+- name: stalin-time-city-building-trees-sky.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-city-building-trees-sky.jpg
+- name: old-cabin-oldcabin-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-creativity.jpg
+- name: old-door-lock-old-door-lock-2-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-aqua.jpg
+- name: docks-docks-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-colored-circuits.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-horiz-circuit.jpg
+- name: art-museum-art-museum-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-ww2-dresden.jpg
+- name: aws-s3-blossombar-blossombar-still-600.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still-600.png
+- name: downtown-trucksilo-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-oily-mcoilface.jpg
+- name: window-window-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-aqua.jpg
+- name: nazi-invasion-san-pedro-light-cities.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-san-pedro-light-cities.jpg
+- name: blossombar-dry-skin-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dry-skin-file-00-00-50-62.jpg
+- name: aws-s3-mountainlake-mountainlake-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still-1200.jpg
+- name: machine-road-machine-road-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-yellow-paper.jpg
+- name: carry-load-carryload-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-alberto-giacometti.jpg
+- name: walled-garden-walled-garden-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-bright-sand.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-umberto-bocc.jpg
+- name: flower-barbed-wire-flower-barbed-wire-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-gan-vogh.jpg
+- name: gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-aqua.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-aqua.JPG
+- name: dragon-desert-desert-dragon-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-marcel-duchamp.jpg
+- name: stalin-time-statue-supreme-court.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-supreme-court.jpg
+- name: old-school-house-old-schoolhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dark-soul.jpg
+- name: aws-s3-lighthouse-lighthouse-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still-1200.jpg
+- name: paris-paris-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-purple-pond.jpg
+- name: stories-losangeles-from-observatory-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-losangeles-from-observatory-blue-circuit.jpg
+- name: server-cloud-server-racks-door-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-bright-sand.jpg
+- name: border-crossing-bordercrossing-dry-skin.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dry-skin.png
+- name: white-house-lawn-white-house-lawn-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-constitution.jpg
+- name: abandonedbuildings_blue_circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_circuit.jpg
+- name: rain-princess-border-crossing-through-fence-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-crossing-through-fence-2.jpg
 ---
 Bernhard Capital Investing In Ascension Sewer Company.&nbsp;Revelers Around The World Usher In The New Decade.&nbsp;Browns Set To Interview McDaniels, Others For Coaching Job.&nbsp;Caitlyn Jenner Opens Up About Kris Jenner Divorce.&nbsp;Wildcats Make Their Choices On National Signing Day.&nbsp;The DDTs Year In Review.&nbsp;Causes Of Knee Pain And Possible Treatments.&nbsp;Sister Ruth Crop Walk.&nbsp;
